// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScansReducer should handle all defined error types: rejected types CANCEL_SCAN 1`] = `
{
  "result": {
    "action": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "CANCEL_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types DELETE_SCAN 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "DELETE_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_REPORTS_DOWNLOAD 1`] = `
{
  "result": {
    "action": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_REPORTS_DOWNLOAD_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCAN_CONNECTION_RESULTS 1`] = `
{
  "result": {
    "action": {},
    "connection": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_CONNECTION_RESULTS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCAN_INSPECTION_RESULTS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_INSPECTION_RESULTS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCAN_JOB 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_JOB_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCAN_JOBS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_JOBS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCANS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_SCANS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types PAUSE_SCAN 1`] = `
{
  "result": {
    "action": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "PAUSE_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types RESTART_SCAN 1`] = `
{
  "result": {
    "action": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "RESTART_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types START_SCAN 1`] = `
{
  "result": {
    "action": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "START_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types CANCEL_SCAN 1`] = `
{
  "result": {
    "action": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "CANCEL_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types DELETE_SCAN 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "DELETE_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_REPORTS_DOWNLOAD 1`] = `
{
  "result": {
    "action": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_REPORTS_DOWNLOAD_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCAN_CONNECTION_RESULTS 1`] = `
{
  "result": {
    "action": {},
    "connection": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_CONNECTION_RESULTS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCAN_INSPECTION_RESULTS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_INSPECTION_RESULTS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCAN_JOB 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_JOB_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCAN_JOBS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_JOBS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCANS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_SCANS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types PAUSE_SCAN 1`] = `
{
  "result": {
    "action": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "PAUSE_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types RESTART_SCAN 1`] = `
{
  "result": {
    "action": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "RESTART_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types START_SCAN 1`] = `
{
  "result": {
    "action": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "START_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types CANCEL_SCAN 1`] = `
{
  "result": {
    "action": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "CANCEL_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types DELETE_SCAN 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "DELETE_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_REPORTS_DOWNLOAD 1`] = `
{
  "result": {
    "action": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_REPORTS_DOWNLOAD_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCAN_CONNECTION_RESULTS 1`] = `
{
  "result": {
    "action": {},
    "connection": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_CONNECTION_RESULTS_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCAN_INSPECTION_RESULTS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_INSPECTION_RESULTS_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCAN_JOB 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_JOB_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCAN_JOBS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "GET_SCAN_JOBS_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCANS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
  },
  "type": "GET_SCANS_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types PAUSE_SCAN 1`] = `
{
  "result": {
    "action": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "PAUSE_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types RESTART_SCAN 1`] = `
{
  "result": {
    "action": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "RESTART_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types START_SCAN 1`] = `
{
  "result": {
    "action": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "START_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle specific defined types: defined type DESELECT_SCAN 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {
      "undefined": null,
    },
    "update": 0,
    "view": {},
  },
  "type": "DESELECT_SCAN",
}
`;

exports[`ScansReducer should handle specific defined types: defined type EXPANDED_SCAN 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {
      "undefined": undefined,
    },
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "EXPANDED_SCAN",
}
`;

exports[`ScansReducer should handle specific defined types: defined type MERGE_SCAN_DIALOG_HIDE 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "MERGE_SCAN_DIALOG_HIDE",
}
`;

exports[`ScansReducer should handle specific defined types: defined type MERGE_SCAN_DIALOG_SHOW 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": undefined,
      "scans": undefined,
      "show": true,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "MERGE_SCAN_DIALOG_SHOW",
}
`;

exports[`ScansReducer should handle specific defined types: defined type NOT_EXPANDED_SCAN 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {
      "undefined": null,
    },
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "NOT_EXPANDED_SCAN",
}
`;

exports[`ScansReducer should handle specific defined types: defined type RESET_SCAN_ACTIONS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "RESET_SCAN_ACTIONS",
}
`;

exports[`ScansReducer should handle specific defined types: defined type SELECT_SCAN 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {
      "undefined": undefined,
    },
    "update": 0,
    "view": {},
  },
  "type": "SELECT_SCAN",
}
`;

exports[`ScansReducer should handle specific defined types: defined type UPDATE_SCANS 1`] = `
{
  "result": {
    "action": {},
    "connection": {},
    "deleted": {},
    "expanded": {},
    "inspection": {},
    "job": {},
    "jobs": {},
    "mergeDialog": {
      "details": false,
      "scans": [],
      "show": false,
    },
    "selected": {},
    "update": 1654041600000,
    "view": {},
  },
  "type": "UPDATE_SCANS",
}
`;
